# VOCNews

./: Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: docker.yml  test.yml
src/: feedrss.py  lapresse.py  logging_conf.py  mdb.py  rssutils.py  telegram_bot.py  translate.py  utils.py
tests/: test_rssutils.py  test_translate.py
